# OFS

./: .gitignore  .gitmodules  CMakeLists.txt  LuaApiReference.md  README.md
OFS-lib/: CMakeLists.txt  OFS_BinarySerialization.h  OFS_ControllerInput.cpp  OFS_ControllerInput.h  OFS_DebugBreak.h  OFS_DynamicFontAtlas.cpp  OFS_DynamicFontAtlas.h  OFS_FileLogging.cpp  OFS_FileLogging.h  OFS_MpvLoader.cpp  OFS_Profiling.h  OFS_Reflection.h  OFS_Serialization.h  OFS_ThreadPool.cpp  OFS_ThreadPool.h  OFS_TypedID.h  OFS_Util.cpp  OFS_Util.h  OFS_VectorSet.h
OFS-lib/Funscript/: Funscript.cpp  Funscript.h  FunscriptAction.h  FunscriptHeatmap.cpp  FunscriptHeatmap.h  FunscriptSpline.h  FunscriptUndoSystem.h
OFS-lib/UI/: GradientBar.h  OFS_BlockingTask.cpp  OFS_ImGui.cpp  OFS_ImGui.h  OFS_KeybindingSystem.cpp  OFS_KeybindingSystem.h  OFS_ScriptTimeline.cpp  OFS_ScriptTimeline.h  OFS_VideoplayerControls.cpp  OFS_VideoplayerControls.h  OFS_Waveform.cpp  OFS_Waveform.h  ScriptPositionsOverlayMode.cpp  ScriptPositionsOverlayMode.h
OFS-lib/event/: OFS_Event.h  OFS_EventSystem.cpp  OFS_EventSystem.h
OFS-lib/io/: OFS_BinarySerialization.cpp  OFS_BinarySerialization.h  OFS_FileDialogs.cpp  OFS_FileDialogs.h  OFS_FileLogging.cpp  OFS_FileLogging.h  OFS_Serialization.h
OFS-lib/localization/: OFS_Localization.cpp  OFS_Localization.h
OFS-lib/state/: OFS_LibState.cpp  OFS_StateHandle.h  OFS_StateManager.cpp  OFS_StateManager.h
OFS-lib/state/states/: BaseOverlayState.h  ChapterState.h  KeybindingState.cpp  KeybindingState.h  WaveformState.h
OFS-lib/videoplayer/: OFS_VideoplayerWindow.cpp  OFS_VideoplayerWindow.h
OFS-lib/videoplayer/impl/: OFS_MpvVideoplayer.cpp
cmake/: stb.c.in
localization/: CMakeLists.txt  gen_localization.cpp  localization.csv
src/: CMakeLists.txt  OFS_ControllerInput.cpp  OFS_ControllerInput.h  OFS_Project.cpp  OFS_Project.h  OFS_SDLUtil.cpp  OFS_SDLUtil.h  OFS_ScriptingMode.cpp  OFS_ScriptingMode.h  OFS_UndoSystem.cpp  OFS_UndoSystem.h  OpenFunscripter.cpp  OpenFunscripter.h  main.cpp
src/UI/: OFS_ChapterManager.cpp  OFS_ChapterManager.h  OFS_DownloadFfmpeg.cpp  OFS_DownloadFfmpeg.h  OFS_FunscriptMetadataEditor.cpp  OFS_FunscriptMetadataEditor.h  OFS_Preferences.cpp  OFS_Preferences.h  OFS_ScriptPositionsOverlays.cpp  OFS_ScriptPositionsOverlays.h  OFS_ScriptSimulator.cpp  OFS_ScriptSimulator.h  OFS_SpecialFunctions.cpp  OFS_SpecialFunctions.h
src/api/: OFS_WebsocketApi.cpp  OFS_WebsocketApi.h  OFS_WebsocketApiClient.cpp  OFS_WebsocketApiClient.h  OFS_WebsocketApiCommands.cpp  OFS_WebsocketApiCommands.h  OFS_WebsocketApiEvents.cpp  OFS_WebsocketApiEvents.h
src/event/: OFS_SDL_Event.h
src/funscript/: FunscriptHeatmap.cpp  FunscriptHeatmap.h
src/gl/: OFS_GPU.cpp  OFS_Shader.h
src/io/: OFS_SerializeHelper.cpp  OFS_SerializeHelper.h
src/lua/: OFS_Lua.h  OFS_LuaCoreExtension.cpp  OFS_LuaExtension.cpp  OFS_LuaExtension.h  OFS_LuaExtensionAPI.cpp  OFS_LuaExtensionAPI.h  OFS_LuaExtensions.cpp  OFS_LuaExtensions.h
src/lua/api/: OFS_LuaImGuiAPI.cpp  OFS_LuaImGuiAPI.h  OFS_LuaPlayerAPI.cpp  OFS_LuaPlayerAPI.h  OFS_LuaProcessAPI.cpp  OFS_LuaProcessAPI.h  OFS_LuaScriptAPI.cpp  OFS_LuaScriptAPI.h
src/state/: MetadataEditorState.h  OpenFunscripterState.cpp  OpenFunscripterState.h  PreferenceState.h  ProjectState.h  ScriptModeState.h  SimulatorState.h  SpecialFunctionsState.h  WebsocketApiState.h
src/state/states/: BaseOverlayState.h  ChapterState.cpp  ChapterState.h  KeybindingState.h  VideoplayerWindowState.h  WaveformState.h
src/ui/: GradientBar.cpp  GradientBar.h  OFS_BlockingTask.cpp  OFS_BlockingTask.h  OFS_DynamicFontAtlas.cpp  OFS_DynamicFontAtlas.h  OFS_ImGui.cpp  OFS_ImGui.h  OFS_KeybindingSystem.cpp  OFS_KeybindingSystem.h  OFS_ScriptTimeline.cpp  OFS_ScriptTimeline.h  OFS_ScriptTimelineEvents.h  OFS_VideoplayerControls.cpp  OFS_VideoplayerControls.h  OFS_Videopreview.cpp  OFS_Videopreview.h  OFS_Waveform.cpp  OFS_Waveform.h  ScriptPositionsOverlayMode.cpp  ScriptPositionsOverlayMode.h
src/videoplayer/: OFS_MpvLoader.cpp  OFS_MpvLoader.h  OFS_MpvMacros.h  OFS_MpvVideoplayer.cpp  OFS_Videoplayer.cpp  OFS_Videoplayer.h  OFS_VideoplayerEvents.h  OFS_VideoplayerWindow.cpp  OFS_VideoplayerWindow.h
